opam-version: "1.2"
version: "v0.10.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_ssl"
bug-reports: "https://github.com/janestreet/async_ssl/issues"
dev-repo: "git+https://github.com/janestreet/async_ssl.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"                   {>= "v0.10" & < "v0.11"}
  "base"                    {>= "v0.10" & < "v0.11"}
  "configurator"            {>= "v0.10" & < "v0.11"}
  "core"                    {>= "v0.10" & < "v0.11"}
  "ppx_driver"              {>= "v0.10" & < "v0.11"}
  "ppx_jane"                {>= "v0.10" & < "v0.11"}
  "stdio"                   {>= "v0.10" & < "v0.11"}
  "conf-openssl"
  "ctypes"
  "ctypes-foreign"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
An Async-pipe-based interface with OpenSSL.

This library allows you to create an SSL client and server, with
encrypted communication between both.
"
