opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_ssl"
bug-reports: "https://github.com/janestreet/async_ssl/issues"
dev-repo: "git+https://github.com/janestreet/async_ssl.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "base"
  "configurator"
  "core"
  "ppx_jane"
  "stdio"
  "conf-openssl"
  "ctypes"
  "ctypes-foreign"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
An Async-pipe-based interface with OpenSSL.

This library allows you to create an SSL client and server, with
encrypted communication between both.
"
