opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_ssl"
bug-reports: "https://github.com/janestreet/async_ssl/issues"
dev-repo: "git+https://github.com/janestreet/async_ssl.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_ssl/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "base"
  "core"
  "ppx_jane"
  "ppx_optcomp"
  "stdio"
  "conf-libssl"
  "ctypes"            {= "0.23.0+ox"}
  "ctypes-foreign"    {= "0.23.0+ox"}
  "dune"              {>= "3.17.0"}
  "dune-configurator"
  "integers"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An Async-pipe-based interface with OpenSSL"
description: "
This library allows you to create an SSL client and server, with
encrypted communication between both.
"
