(rule
 (targets openssl-ccopt.sexp openssl-cclib.sexp openssl-ccopt openssl-cclib)
 (deps
  (:first_dep config/discover.exe))
 (action
  (run %{first_dep})))

(rule
 (targets discover.exe)
 (deps discover.c openssl-ccopt openssl-cclib)
 (action
  (bash
    "%{cc} $(< openssl-ccopt) discover.c $(< openssl-cclib) $([[ $(uname) == *BSD ]] || echo -n -ldl) -o discover.exe")))

(rule
 (targets config.h)
 (deps
  (:first_dep discover.exe))
 (action
  (bash "./%{first_dep} > config.h")))

(library
 (foreign_stubs
  (language c)
  (names openssl_helpers)
  (flags
   (:standard
    (:include openssl-ccopt.sexp)
    \
    -Werror
    -pedantic
    -Wall
    -Wunused)))
 (name async_ssl_bindings)
 (public_name async_ssl.bindings)
 (c_library_flags
  :standard
  (:include openssl-cclib.sexp))
 (libraries ctypes.stubs ctypes ctypes.foreign base)
 (virtual_deps conf-libssl)
 (preprocessor_deps config.h)
 (preprocess
  (pps ppx_jane ppx_optcomp)))
