(rule
 (targets ffi_generated.ml)
 (deps
  (:first_dep ../stubgen/ffi_stubgen.exe))
 (action
  (bash "%{first_dep} -ml > ffi_generated.ml")))

(rule
 (targets ffi_generated_stubs.c)
 (deps
  (:first_dep ../stubgen/ffi_stubgen.exe))
 (action
  (bash "%{first_dep} -c > ffi_generated_stubs.c")))

(rule
 (targets ffi_generated_types.ml)
 (deps
  (:first_dep ../stubgen/ffi_ml_types_stubgen.exe))
 (action
  (bash "%{first_dep} > ffi_generated_types.ml")))

(library
 (foreign_stubs
  (language c)
  (names ffi_generated_stubs)
  (flags
   :standard
   -Wno-everything
   (:include ../bindings/openssl-ccopt.sexp)))
 (name async_ssl)
 (public_name async_ssl)
 (modules import version opt verify_mode ffi_generated_types ffi_generated
   ffi__library_must_be_initialized rfc3526 ssl initialize std config tls
   async_ssl)
 (flags :standard -w -9-27-32-34)
 (libraries async core async_ssl_bindings ctypes.stubs ctypes integers)
 (preprocess
  (pps ppx_jane)))
